--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8889/mcdospring
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:8889/mcdospring?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
